--- a/client/src/components/menu.css
+++ b/client/src/components/menu.css
@@ -15,6 +15,7 @@
     background-color: #5bc0de;
     border-radius: 12px;
     align-items: baseline;
+    padding: 10px;
 }
 
 .item {
@@ -22,4 +23,135 @@
     margin-top: 50px;
     margin-bottom: 50px;
     color: white;
+}
+
+.itemfullMenuAlumnos {
+    min-height: 200px;
+    width: 350px;
+    padding: 10px;
+    align-content: center;
+    background-color: #5bc0de;
+    border-radius: 12px;
+    align-items: baseline;
+}
+
+.itemfullRegistro {
+    min-height: 200px;
+    line-height: 135%;
+    align-content: center;
+    width: 70vw;
+    align-content: center;
+    background-color: #5bc0de;
+    border-radius: 12px;
+    align-items: center;
+    padding: 10px;
+}
+
+.identificadorForm form {
+    text-align: center;
+}
+
+.identificadorForm label {
+    font-size: 18px;
+    color: white;
+}
+
+.identificadorForm input[type=text], select, input[type=email], textarea {
+    color: white;
+    width: 90%;
+    height: auto;
+    padding: 1vw 2vw;
+    margin-right: 2vw;
+    margin: 1.5vh 0vw;
+    display: inline-block;
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: rgba(255, 255, 255, 0.2);
+    transition: all 500ms ease;
+}
+
+.identificadorForm select option {
+    margin: 40px;
+    background: rgba(90, 186, 226);
+    color: white;
+    opacity: 1;
+    border: none;
+}
+
+.identificadorForm input[type=text]::placeholder, input[type=email]::placeholder, textarea[type=text]::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgba(236, 240, 241, 0.8);
+    opacity: 1;
+    /* Firefox */
+}
+
+.identificadorForm input[type=text]:-ms-input-placeholder, input[type=email]:-ms-input-placeholder, textarea[type=text]:-ms-input-placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgba(236, 240, 241, 0.8);
+    opacity: 1;
+    /* Firefox */
+}
+
+@media screen and (max-width: 345px) {
+    .identificadorForm input[type=text], select, input[type=email], textarea {
+        width: 90vw;
+    }
+
+    .identificadorForm textarea {
+        width: 90vw;
+        height: auto;
+    }
+}
+
+.identificadorForm select {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    overflow: hidden;
+}
+
+.identificadorForm input[type=text]:focus, input[type=email]:focus, textarea:focus {
+    background-color: rgba(90, 186, 226, 0.700);
+}
+
+.identificadorForm input[type=submit] {
+    width: 90%;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.800);
+    color: #5bc0de;
+    font-size: 18px;
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.identificadorForm input[type=submit]::after {
+    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.identificadorForm input[type=submit]:hover {
+    -webkit-transform: scale(1.02, 1.02);
+    transform: scale(1.02, 1.02);
+    background-color: white;
+    color: #5bc0de;
+}
+
+.identificadorForm input[type=submit]:hover::after {
+    opacity: 1;
+}
+
+@media screen and (max-width: 345px) {
+    .identificadorForm input[type=submit] {
+        width: 90vw;
+    }
+}
+
+.identificadorForm textarea {
+    resize: none;
 }
