--- a/client/src/components/menu.css
+++ b/client/src/components/menu.css
@@ -155,3 +155,13 @@
 .identificadorForm textarea {
     resize: none;
 }
+
+.colorForm {
+    text-align: center;
+    color: white;
+    line-height: 15px;
+}
+
+.colorForm h2 {
+    color: grey;
+}
