--- a/client/src/components/contabilidad.css
+++ b/client/src/components/contabilidad.css
@@ -1,3 +1,43 @@
-.containerCuenta {
-    margin-top: 20px;
+
+.all {
+  text-align: center;
+}
+
+.all h1 {
+  color: #5bc0de;
+}
+
+.margins {
+  margin-top: 50px;
+}
+
+.box {
+  height: 200px;
+  width: 300px;
+  background-color: #5bc0de;
+  border-radius: 15px;
+  color: white;
+}
+
+.boxAlt {
+  height: 150px;
+  background-color: #5bc0de;
+  border-radius: 15px;
+  color: white;
+}
+
+.inputA {
+  border-radius: 5px;
+}
+
+.buttonMargin {
+  margin-top: 20px;
+}
+
+.buttonBalance {
+  margin-top: 10px;
+}
+
+.buttonBalanceA {
+  margin-top: 30px;
 }
